# Tauri-FFmpeg-GUI

./: Dockerfile.arm64  Dockerfile.x64  README.md  index.html  package-lock.json  package.json
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: codec.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/utility/: _command.rs  mod.rs
