[package]
name = "tauri_ffmpeg_gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["William"]
edition = "2021"

[lib]
name = "tauri_ffmpeg_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.41"
once_cell = "1.21.3"
nix = { version = "0.27", features = ["signal"] }
windows-sys = { version = "0.60.2", features = ["Win32_System_Threading"] }
